# MatricesAndVectorsClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Client.hpp  Constants.hpp  MatricesClient.hpp  MatricesManager.hpp  Utility.hpp  VariableManager.hpp
lib/MatricesAndVectors/include/: Array2DWrapper.hpp  Matrix.hpp  MatrixOrScalar.hpp  Scalar.hpp  Vector.hpp
src/: Client.cpp  Client.hpp  Constants.cpp  Constants.hpp  MatricesClient.cpp  MatricesClient.hpp  MatricesManager.cpp  Utility.cpp  Utility.hpp  VariableManager.cpp  VariableManager.hpp  main.cpp
